added ip and port variabels

--- a/variables.env
+++ b/variables.env
@@ -1,6 +1,9 @@
 MINECRAFT_SERVER_VERSION=1.14.4
 MINECRAFT_MAP_NAME=Uka
 
+MINECRAFT_SERVER_IP=0.0.0.0
+MINECRAFT_SERVER_PORT=25565
+
 MINECRAFT_SERVER_RAM=1024M
 MINECRAFT_JRE_RAM=1024M
 
