--- a/settings/server.properties.template
+++ b/settings/server.properties.template
@@ -2,7 +2,7 @@
 #Wed Oct 28 00:28:25 GMT 2020
 spawn-protection=16
 max-tick-time=60000
-query.port=25565
+query.port=$MINECRAFT_SERVER_PORT
 generator-settings=
 force-gamemode=false
 allow-nether=true
@@ -26,8 +26,8 @@ resource-pack-sha1=
 max-world-size=29999984
 function-permission-level=2
 rcon.port=25575
-server-port=25565
-server-ip=0.0.0.0
+server-port=$MINECRAFT_SERVER_PORT
+server-ip=$MINECRAFT_SERVER_IP
 spawn-npcs=true
 allow-flight=false
 level-name=$MINECRAFT_MAP_NAME
